--- a/style.css
+++ b/style.css
@@ -40,3 +40,38 @@
   width: 50%;
   height: 300px;
 }
+
+/* //________________________________________________ */
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  height: 600px;
+}
+
+.box-one {
+  grid-column: 1/1;
+  grid-row: 1/3;
+  background-color: lightblue;
+}
+
+.box-two {
+  grid-column: 2/3;
+  grid-row: 1/2;
+
+  display: flex;
+  align-items: center;
+
+  background-color: orange;
+}
+
+.box-two p {
+  flex-basis: 50%;
+}
+
+.box-three {
+  grid-column: 2/3;
+  grid-row: 2/3;
+
+  background-color: lightyellow;
+}
